[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/enemies/Seagull/guano.png" type="Texture" id=1]
[ext_resource path="res://guano.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 46.0

[node name="guano" type="Area2D"]
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1.50001 )
scale = Vector2( 0.2, 0.195 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_guano_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_guano_body_entered"]
[connection signal="mooms_bumped" from="." to="." method="_on_guano_mooms_bumped"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
